Fix logo on small screens

--- a/app/assets/stylesheets/gsoh.scss
+++ b/app/assets/stylesheets/gsoh.scss
@@ -3,6 +3,7 @@
 }
 
 .gsoh-logo {
+  margin-left: 15px;
   padding-left: 56px;
   background: image-url('blue-house.svg');
   background-size: 48px 48px;
